--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "engines": {
-    "node": "22.x"
-  },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -37,3 +34,6 @@
     "vite": "^4.4.5"
   }
 }
+
+
+this is package.json
